Wrap code within h4 tags in RefCard to prevent overflow

--- a/components/blocks/refCard.module.css
+++ b/components/blocks/refCard.module.css
@@ -112,6 +112,10 @@
   @apply hidden;
 }
 
+.Container h4 code {
+  overflow-wrap: anywhere;
+}
+
 /* Deprecation notice */
 .Container i.DeprecatedIcon {
   @apply absolute -right-2 top-0 cursor-pointer;
